aquaerp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"traefik","traefik.ingress.kubernetes.io/router.entrypoints":"websecure","traefik.ingress.kubernetes.io/router.tls":"true","traefik.ingress.kubernetes.io/router.tls.certresolver":"letsencrypt"},"creationTimestamp":"2025-07-14T00:26:11Z","generation":3,"name":"aquaerp-ingress","namespace":"aquaerp","resourceVersion":"386853","uid":"6e2e630b-a0bf-4d29-9bb6-6c586a918a49"},"spec":{"ru [...]
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  creationTimestamp: "2025-07-14T00:26:11Z"
  generation: 3
  name: aquaerp-ingress
  namespace: aquaerp
  resourceVersion: "387815"
  uid: 6e2e630b-a0bf-4d29-9bb6-6c586a918a49
spec:
  rules:
  - host: api.aquaerp.cloud
    http:
      paths:
      - backend:
          service:
            name: api-gateway
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: app.aquaerp.cloud
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls: []
status:
  loadBalancer: {}
