traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"4"},"creationTimestamp":"2025-07-14T11:35:49Z","generation":4,"labels":{"app":"traefik"},"name":"traefik","namespace":"kube-system","resourceVersion":"388003","uid":"2bf88c59-1d5a-4663-a242-c9827fcb2b27"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"traefik"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailab [...]
  creationTimestamp: "2025-07-14T11:35:49Z"
  generation: 6
  labels:
    app: traefik
  name: traefik
  namespace: kube-system
  resourceVersion: "388745"
  uid: 2bf88c59-1d5a-4663-a242-c9827fcb2b27
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: traefik
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-07-14T17:02:00+02:00"
      creationTimestamp: null
      labels:
        app: traefik
    spec:
      containers:
      - args:
        - --api.insecure=true
        - --providers.kubernetesingress
        - --entrypoints.web.address=:80
        - --entrypoints.websecure.address=:443
        image: traefik:v3.0
        imagePullPolicy: IfNotPresent
        name: traefik
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        - containerPort: 443
          name: websecure
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: traefik-acme-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: traefik-ingress-controller
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 30
      volumes:
      - name: traefik-acme-pvc
        persistentVolumeClaim:
          claimName: traefik-acme-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-07-14T11:35:55Z"
    lastUpdateTime: "2025-07-14T11:35:55Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-07-14T15:02:00Z"
    lastUpdateTime: "2025-07-14T15:02:00Z"
    message: ReplicaSet "traefik-67b5949c6d" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 1
  replicas: 2
  unavailableReplicas: 1
  updatedReplicas: 1
